doctorapp/force-app/main/default/objects/Sale__c/Sale__c.object-meta.xml
<CustomObject>
    <description>Completed sales transaction.</description>
    <label>Sale</label>
    <nameField>
        <displayFormat>SALE-{000000}</displayFormat>
        <label>Sale Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>