doctorapp/force-app/main/default/objects/Sale__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References Customer.</description>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Sales</relationshipLabel>
    <relationshipName>Sales</relationshipName>
    <type>Lookup</type>
</CustomField>