doctorapp/force-app/main/default/objects/Sale__c/fields/Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>Discount_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total discount amount.</description>
    <label>Discount Total</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>