doctorapp/force-app/main/default/objects/Sale__c/fields/Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Number__c</fullName>
    <description>Human-readable receipt number (generated).</description>
    <externalId>true</externalId>
    <label>Receipt Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>