doctorapp/force-app/main/default/objects/Sale__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <description>Before discounts and taxes.</description>
    <label>Subtotal</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>