doctorapp/force-app/main/default/objects/Sale__c/fields/Tax_Total__c.field-meta.xml
<CustomField>
    <fullName>Tax_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total tax amount.</description>
    <label>Tax Total</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>