doctorapp/force-app/main/default/objects/Sale__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Cashier who processed the sale.</description>
    <label>Cashier</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>POS Sales</relationshipLabel>
    <relationshipName>POS_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>