doctorapp/force-app/main/default/objects/Sale__c/validationRules/Non_Negative_Amounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Negative_Amounts</fullName>
    <active>true</active>
    <description>Sale monetary totals cannot be negative.</description>
    <errorConditionFormula>Subtotal__c &lt; 0 || Discount_Total__c &lt; 0 || Tax_Total__c &lt; 0 || Grand_Total__c &lt; 0</errorConditionFormula>
    <errorMessage>Subtotal, Discount Total, Tax Total and Grand Total cannot be negative.</errorMessage>
</ValidationRule>